--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
                     </svg>
                 </a>
                 <div class="botDocs">
-                    <a href="https://github.com/RPowell-C/BotDocs">
+                    <a href="https://github.com/botDocs">
                         <svg width="100" height="100">
-                            <circle cx="50" cy="50" r="5" />
+                            <circle cx="50" cy="50" r="8" />
+                        </svg>
+                    </a>
+                </div>
+                <div class="bot-production">
+                    <a href="https://www.patreon.com/R_powell">
+                        <svg width="100" height="100">
+                            <circle cx="50" cy="50" r="10" />
                         </svg>
                     </a>
                 </div>
